<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="Select_hand">Chose Your Weapon...</string>
    <string name="rock_button">Rock</string>
    <string name="paper_button">Paper</string>
    <string name="scissors_buttons">Scissors</string>
    <string name="your_choice">You chose</string>
    <string name="computer_choice">Computer chose</string>
    <string name="result">And the winner is...</string>
    <string name="returnButton">Play Again</string>
    <string name="about">about</string>
    <string name="settings">score</string>
    <string name="display_wins" />
    <string name="dispplay_losses" />
    <string name="display_losses" />
</resources>
